@@ -28,3 +28,5 @@ As a workaround, manually changing directory into each submodule and running `gi
 ### Have you had any luck using git-annex before? (Sometimes we get tired of reading bug reports all day and a lil' positive end note does wonders)
 
 I use it regularly with great success :)
+
+> [[fixed|done]] --[[Joey]]
